# snix

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
.github/: FUNDING.yml  README.md
.github/scripts/: bump_version.sh
.github/workflows/: auto-release.yml  release.yml
scripts/: build.rs  install.sh
src/: app.rs  main.rs  search.rs
src/cli/: commands.rs  mod.rs  tree.rs
src/handlers/: keys.rs  mod.rs  ollama.rs
src/models/: export.rs  mod.rs  notebook.rs  snippet.rs  snippet_database.rs  storage.rs  tags.rs
src/ui/: about.rs  backup_restore.rs  code_snippets.rs  colors.rs  components.rs  export_import.rs  favorites.rs  mod.rs  notebook_details.rs  ollama.rs  search.rs  snippets.rs  start_page.rs
tapes/: ollama.tape
