[package]
name = "rustyui"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.4"
figlet-rs = "0.1.5"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }