[package]
name = "snix"
version = "0.1.7"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.4"
colored = "2.1.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
syntect = "5.1"
dirs = "5.0"
anyhow = "1.0"
regex = "1.10"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"
tree-sitter-typescript = "0.21"
crossterm = "0.29.0"
once_cell = "1.19"
serde_yaml = "0.9.34"
toml = "0.8.12"
ollama-rs = "0.3.1"
pulldown-cmark = "0.13.0"
unicode-width = "0.2.0"
flume = "0.11.1"
futures = "0.3.31"
reqwest = { version = "0.11", features = ["json", "stream"] }
